--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "email-validator": "^2.0.4",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "firebase": "^9.21.0",
